--- a/CanaryIslandApp/src/main/res/values/strings.xml
+++ b/CanaryIslandApp/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Dummy</string>
-    <string name="dummy_screen_title">Dummy</string>
+    <string name="app_name">CanaryIsland</string>
+    <string name="canaryisland_screen_title">CanaryIsland</string>
     <string name="action_settings">Settings</string>
     <string name="screen_text">Text</string>
     <string name="button_label">Button</string>
