--- a/CanaryIslandApp/src/main/res/values/strings.xml
+++ b/CanaryIslandApp/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">CanaryIsland</string>
     <string name="canaryisland_screen_title">CanaryIsland</string>
     <string name="action_settings">Settings</string>
+    <string name="title_item_list">Categories</string>
     <string name="screen_text">Text</string>
     <string name="button_label">Button</string>
+    <string name="action_restore">Restore</string>
 </resources>
