--- a/CanaryIslandApp/src/main/res/values/strings.xml
+++ b/CanaryIslandApp/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="screen_text">Text</string>
     <string name="button_label">Button</string>
     <string name="action_restore">Restore</string>
+    <string name="action_search">Search</string>
 </resources>
